Fixed footer on mobile

--- a/src/css/homepage.css
+++ b/src/css/homepage.css
@@ -121,11 +121,3 @@
     transform: scale(1.5);
     box-shadow: 0 0 24px rgba(253, 7, 0, 0.6);
 }
-
-.footer {
-    height: 20vh;
-}
-
-.footer__copyright {
-    padding-bottom: 10px;
-}
